# libibs

./: CMakeLists.txt  README.md  pyibs.py  setup.py
src/: libibs.cpp
